@@ -7,22 +7,34 @@ import com.codesoom.assignment.domain.User;
 import com.codesoom.assignment.dto.UserModificationData;
 import com.codesoom.assignment.dto.UserRegistrationData;
 import com.codesoom.assignment.errors.UserNotFoundException;
+import com.codesoom.assignment.security.UserAuthentication;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.restdocs.AutoConfigureRestDocs;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
+import static org.springframework.restdocs.headers.HeaderDocumentation.headerWithName;
+import static org.springframework.restdocs.headers.HeaderDocumentation.requestHeaders;
+import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
+import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
+import static org.springframework.restdocs.payload.PayloadDocumentation.requestFields;
+import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
+import static org.springframework.restdocs.request.RequestDocumentation.parameterWithName;
+import static org.springframework.restdocs.request.RequestDocumentation.pathParameters;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -30,6 +42,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(UserController.class)
+@AutoConfigureRestDocs
 class UserControllerTest {
     private static final String MY_TOKEN = "eyJhbGciOiJIUzI1NiJ9." +
             "eyJ1c2VySWQiOjF9.ZZ3CUl0jxeLGvQ1Js5nG2Ty5qGTlqai5ubDMXZOdaDk";
@@ -99,26 +112,25 @@ class UserControllerTest {
         given(userService.deleteUser(100L))
                 .willThrow(new UserNotFoundException(100L));
 
-        given(authenticationService.parseToken(MY_TOKEN)).willReturn(1L);
-        given(authenticationService.parseToken(OTHER_TOKEN)).willReturn(2L);
-        given(authenticationService.parseToken(ADMIN_TOKEN)).willReturn(1004L);
+        given(authenticationService.authenticate(MY_TOKEN)).willReturn(
+                new UserAuthentication(1L, List.of(new Role("USER"))));
 
-        given(authenticationService.roles(1L))
-                .willReturn(Arrays.asList(new Role("USER")));
-        given(authenticationService.roles(2L))
-                .willReturn(Arrays.asList(new Role("USER")));
-        given(authenticationService.roles(1004L))
-                .willReturn(Arrays.asList(new Role("USER"), new Role("ADMIN")));
+        given(authenticationService.authenticate(OTHER_TOKEN)).willReturn(
+                new UserAuthentication(2L, List.of(new Role("USER"))));
+
+        given(authenticationService.authenticate(ADMIN_TOKEN)).willReturn(
+                new UserAuthentication(1004L, List.of(new Role("USER"), new Role("ADMIN"))));
     }
 
     @Test
+    @DisplayName("create 메서드는 user 를 생성하여 저장하고 리턴한다")
     void registerUserWithValidAttributes() throws Exception {
         mockMvc.perform(
-                post("/users")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"email\":\"tester@example.com\"," +
-                                "\"name\":\"Tester\",\"password\":\"test\"}")
-        )
+                        post("/users")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"email\":\"tester@example.com\"," +
+                                        "\"name\":\"Tester\",\"password\":\"test\"}")
+                )
                 .andExpect(status().isCreated())
                 .andExpect(content().string(
                         containsString("\"id\":13")
@@ -128,60 +140,97 @@ class UserControllerTest {
                 ))
                 .andExpect(content().string(
                         containsString("\"name\":\"Tester\"")
-                ));
+                ))
+                .andDo(
+                        document("post-users",
+                                requestFields(
+                                        fieldWithPath("email").description("유저 email"),
+                                        fieldWithPath("name").description("유저 name"),
+                                        fieldWithPath("password").description("유저 password")
+                                ),
+                                responseFields(
+                                        fieldWithPath("id").description("유저 id"),
+                                        fieldWithPath("email").description("유저 email"),
+                                        fieldWithPath("name").description("유저 name")
+                                )
+                        )
+                );
 
         verify(userService).registerUser(any(UserRegistrationData.class));
     }
 
     @Test
+    @DisplayName("create 메서드는 유효하지 않은 attribute 로 요청한 경우 400을 리턴한다")
     void registerUserWithInvalidAttributes() throws Exception {
         mockMvc.perform(
-                post("/users")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{}")
-        )
+                        post("/users")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{}")
+                )
                 .andExpect(status().isBadRequest());
     }
 
     @Test
+    @DisplayName("update 메서드는 요청한 user id 의 user 를 수정하고 리턴한다")
     void updateUserWithValidAttributes() throws Exception {
         mockMvc.perform(
-                patch("/users/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"TEST\",\"password\":\"test\"}")
-                        .header("Authorization", "Bearer " + MY_TOKEN)
-        )
+                        RestDocumentationRequestBuilders.patch("/users/{userId}", 1)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"name\":\"TEST\",\"password\":\"test\"}")
+                                .header("Authorization", "Bearer " + MY_TOKEN)
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string(
                         containsString("\"id\":1")
                 ))
                 .andExpect(content().string(
                         containsString("\"name\":\"TEST\"")
-                ));
+                ))
+                .andDo(
+                        document("patch-users",
+                                requestHeaders(
+                                        headerWithName("Authorization").description("수정할 userId와 동일한 token")
+                                ),
+                                pathParameters(
+                                        parameterWithName("userId").description("User Id")
+                                ),
+                                requestFields(
+                                        fieldWithPath("name").description("수정할 유저 name"),
+                                        fieldWithPath("password").description("수정할 유저 password")
+                                ),
+                                responseFields(
+                                        fieldWithPath("id").description("유저 id"),
+                                        fieldWithPath("email").description("유저 email"),
+                                        fieldWithPath("name").description("유저 name")
+                                )
+                        )
+                );
 
         verify(userService)
                 .updateUser(eq(1L), any(UserModificationData.class), eq(1L));
     }
 
     @Test
+    @DisplayName("update 메서드는 유효하지 않은 attribute 로 요청한 경우 400을 리턴한다")
     void updateUserWithInvalidAttributes() throws Exception {
         mockMvc.perform(
-                patch("/users/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"\",\"password\":\"\"}")
-                        .header("Authorization", "Bearer " + MY_TOKEN)
-        )
+                        patch("/users/1")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"name\":\"\",\"password\":\"\"}")
+                                .header("Authorization", "Bearer " + MY_TOKEN)
+                )
                 .andExpect(status().isBadRequest());
     }
 
     @Test
+    @DisplayName("update 메서드는 저장되지 않은 user Id로 요청한 경우 404를 리턴한다")
     void updateUserWithNotExsitedId() throws Exception {
         mockMvc.perform(
-                patch("/users/100")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"TEST\",\"password\":\"TEST\"}")
-                        .header("Authorization", "Bearer " + MY_TOKEN)
-        )
+                        patch("/users/100")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"name\":\"TEST\",\"password\":\"TEST\"}")
+                                .header("Authorization", "Bearer " + MY_TOKEN)
+                )
                 .andExpect(status().isNotFound());
 
         verify(userService).updateUser(
@@ -191,23 +240,25 @@ class UserControllerTest {
     }
 
     @Test
+    @DisplayName("update 메서드는 Access Token 이 없이 요청한 경우 401을 리턴한다")
     void updateUserWithoutAccessToken() throws Exception {
         mockMvc.perform(
-                patch("/users/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"TEST\",\"password\":\"test\"}")
-        )
+                        patch("/users/1")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"name\":\"TEST\",\"password\":\"test\"}")
+                )
                 .andExpect(status().isUnauthorized());
     }
 
     @Test
+    @DisplayName("update 메서드는 다른 user 의 AccessToken 으로 요청한 경우 403을 리턴한다")
     void updateUserWithOthersAccessToken() throws Exception {
         mockMvc.perform(
-                patch("/users/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"name\":\"TEST\",\"password\":\"test\"}")
-                        .header("Authorization", "Bearer " + OTHER_TOKEN)
-        )
+                        patch("/users/1")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content("{\"name\":\"TEST\",\"password\":\"test\"}")
+                                .header("Authorization", "Bearer " + OTHER_TOKEN)
+                )
                 .andExpect(status().isForbidden());
 
         verify(userService)
@@ -215,39 +266,53 @@ class UserControllerTest {
     }
 
     @Test
+    @DisplayName("destroy 메서드는 요청한 user Id의 user 를 삭제한다")
     void destroyWithExistedId() throws Exception {
         mockMvc.perform(
-                delete("/users/1")
-                        .header("Authorization", "Bearer " + ADMIN_TOKEN)
-        )
-                .andExpect(status().isOk());
+                        RestDocumentationRequestBuilders.delete("/users/{userId}", 1)
+                                .header("Authorization", "Bearer " + ADMIN_TOKEN)
+                )
+                .andExpect(status().isOk())
+                .andDo(
+                        document("delete-users",
+                                requestHeaders(
+                                        headerWithName("Authorization").description("ADMIN 권한을 갖고 있는 token")
+                                ),
+                                pathParameters(
+                                        parameterWithName("userId").description("User Id")
+                                )
+                        )
+                );
 
         verify(userService).deleteUser(1L);
     }
 
     @Test
+    @DisplayName("destroy 메서드는 요청한 user Id 의 user 가 저장되어 있지 않은 경우 404를 리턴한다")
     void destroyWithNotExistedId() throws Exception {
         mockMvc.perform(
-                delete("/users/100")
-                        .header("Authorization", "Bearer " + ADMIN_TOKEN)
-        )
+                        delete("/users/100")
+                                .header("Authorization", "Bearer " + ADMIN_TOKEN)
+                )
                 .andExpect(status().isNotFound());
 
         verify(userService).deleteUser(100L);
     }
 
     @Test
+    @DisplayName("destroy 메서드는 Access Token 이 없이 요청한 경우 401을 리턴한다")
     void destroyWithoutAccessToken() throws Exception {
         mockMvc.perform(delete("/users/1"))
                 .andExpect(status().isUnauthorized());
     }
 
     @Test
+    @DisplayName("destroy 메서드는 ADMIN Role 이 없는 AccessToken 으로 요청한 경우 403을 리턴한다")
     void destroyWithoutAdminRole() throws Exception {
         mockMvc.perform(
-                delete("/users/1")
-                        .header("Authorization", "Bearer " + MY_TOKEN)
-        )
+                        delete("/users/1")
+                                .header("Authorization", "Bearer " + MY_TOKEN)
+                )
                 .andExpect(status().isForbidden());
     }
 }
